blocks/cards/cards.css
:root {
    --helix-core-card-border-radius: 16px;
    --helix-core-card-footnote-border-top: 1px solid var(--helix-core-neutrals-neutral-dark);
    --helix-core-card-box-shadow: rgb(0 0 0 / 25%) 0 2px 4px 0;
    --helix-core-card-color: var(--helix-core-neutrals-black);
    --helix-core-card-kicker-multiple-padding-bottom-property: 8px;
    --helix-core-card-step-height: calc(var(--helix-core-spacing-multiplier) * 10);
    --helix-card-item-default-padding: calc(var(--helix-core-spacing-multiplier) * 6);
}

.section.cards-container,
.section.cards-with-background-container,
.section.cards-with-background-right-container {
    overflow: hidden;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    max-width: unset;
}

.section.cards-with-background-right-container {
    max-width: 75rem;
}


.section.cards-container .cards-wrapper,
.section.cards-with-background-container .cards-with-background-wrapper,
.section.cards-with-background-right-container .cards-with-background-right-wrapper  {
    max-width: 75rem;
}

.section.cards-with-background-container .default-content-wrapper picture {
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    object-fit: cover;
    max-width: unset;
}

.section.cards-with-background-right-container .default-content-wrapper picture {
    display: none;
}


.section.cards-with-background-container::before {
    content: unset;
}

@media (min-width: 768px){
    .section.cards-with-background-right-container .default-content-wrapper picture {
        display: unset;
        position: absolute;
        right: 0;
        left: 50%;
        z-index: -1;
        bottom: 0;
        height: calc(100% - 80px);
        object-fit: cover;
        max-width: unset;
    }

    .section.cards-with-background-container::before {
        content: "";
        position: absolute;
        z-index: 1;
        top: 0;
        left: 0;
        bottom: -1px;
        right: 0;
        object-fit: cover;
        box-sizing: border-box;
        max-width: unset;
        background-color: white;
        clip-path: polygon( 100% 100%, 0% 85%, 0% 100%);
    }
}

:is(.cards-container, .cards-with-background-container, .cards-with-background-right-container) .default-content-wrapper picture img {
    height: 100%;
    width: 100%;
}

.section.cards-with-background-container .cards {
    margin-bottom: calc(40 * var(--helix-core-spacing-multiplier));
}

.section.cards-with-background-container .default-content-wrapper h2 {
    color: var(--helix-core-neutrals-white) !important;
    font-family: var(--helix-core-type-preset-1-1-xl-desktop-h1-font-family, inherit);
    font-size: var(--helix-core-type-preset-1-1-xl-desktop-h1-font-size, inherit);
    letter-spacing: var(--helix-core-type-preset-1-1-xl-desktop-h1-letter-spacing, inherit);
    line-height: var(--helix-core-type-preset-1-1-xl-desktop-h1-line-height, inherit);
    font-weight: var(--helix-core-type-preset-1-1-xl-desktop-h1-font-weight, inherit);
}


/* card item list */
.cards-with-background > ul > li {
    background: var(--helix-core-neutrals-white);
    padding: calc(var(--helix-core-spacing-multiplier) * 6);
}

.cards > ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: grid;
    margin-top: calc(10 * var(--helix-core-spacing-multiplier));
    margin-bottom: calc(12 * var(--helix-core-spacing-multiplier));
    column-gap: calc(var(--helix-core-spacing-multiplier) * 6);
    row-gap: calc(var(--helix-core-spacing-multiplier) * 6);
}

.cards > ul > li, .cards > ul > li .cards-card-wrapper {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    position: relative;
    padding-top: 0;
    padding-bottom: 0;
    padding-right: var(--helix-card-item-default-padding);
    flex-grow: 1;
}


/* left colored rail (default) */
.cards > ul > li .cards-card-wrapper::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 4px;
    height: 100%;
}

.cards > ul > li:nth-of-type(3n-2) .cards-card-wrapper::before {
    background:#0097ff;
}

.cards > ul > li:nth-of-type(3n-1) .cards-card-wrapper::before  {
    background: #0ebdba;
}

.cards > ul > li:nth-of-type(3n) .cards-card-wrapper::before  {
    background:#68bb6e;
}

/* // left colored rail (default) */


/* card body */
.cards .cards-card-body {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    flex-grow: 1;
}

/* first child *should* be a header */
.cards .cards-card-body > *:first-child {
    margin-top: 0;
    margin-bottom: 0;
    font-family: var(--body-font-family);
    font-size: 32px;
    font-weight: 300;
    color: rgb(0 0 78);
}

.cards .cards-card-body  hr {
    border: 0;
    border-bottom: var(--helix-core-divider-size-small) var(--helix-core-divider-color) solid;
    margin-block-start: 0.5em;
    margin-block-end: 0.5em;
    width: 100%;
}

/* text content, that is not buttons */
.cards .cards-card-body > p:not(.button-container) {
    font-family: var(--body-font-family);
    margin-top: 0;
    font-size: 16px;
    font-weight: 400;
    color: rgb(56 56 56);
    flex: 1 1 auto;
}

/* buttons */
.cards .cards-card-body .button {
    margin: 0;
    width: 100%;
}

.cards.primary .cards-card-body .button{
    width: auto;
}

.cards .button-container {
    margin: 0;
    padding: 0;
    width: 100%;
}


.cards.list > ul > li .button-container {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
    z-index: 1;
    bottom: 0;
    height: 100%;
    display: flex;
    align-self: flex-end;
    width: 36px;
}

.cards.list > ul > li .button-container .button {
    padding: 6px;
    margin: 0;
    border: 0;
    width: 36px;
    align-self: center;
}

.cards.list  > ul > li .button-container .button svg {
    fill: var(--helix-core-primary-primary)
}

.cards.list  > ul > li .button-container .button:hover,
.cards.list  > ul > li .button-container .button:focus {
    background: none;
}

@media (min-width: 768px){
    .cards-with-background-right > ul > li {
        width: 60%;
    }
}

.cards.list > ul {
    grid-template-columns: 1fr;
}

.cards.list > ul > li {
    box-shadow: var(--helix-core-card-box-shadow, var(--helix-core-card-background-drop-shadow));
    background: white;
    border-top-right-radius: var(--helix-core-card-border-radius, 0);
    border-bottom-right-radius: var(--helix-core-card-border-radius, 0);
}
@media (min-width: 768px){
    .cards-with-background-right > ul > li {
        width: 60%;
    }

    .cards.list > ul > li {
        padding: calc(var(--helix-core-spacing-multiplier) * 8);
        padding-left: calc(var(--helix-core-spacing-multiplier) * 20);
        box-shadow: var(--helix-core-card-box-shadow, var(--helix-core-card-background-drop-shadow));
        border-radius: var(--helix-core-card-border-radius);
        background: white;
    }
}

.cards.primary > ul > li {
    position: relative;
    box-shadow: var(--helix-core-card-box-shadow, var(--helix-core-card-background-drop-shadow));
    border-radius: var(--helix-core-card-border-radius);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    background: var(--helix-core-card-background, var(--helix-core-neutrals-white));
    padding: var(--helix-card-item-default-padding)
}

.cards.primary  > ul > li .cards-card-wrapper::before {
    content: unset;
}


@media (min-width: 768px) {
    /* Three in a row by default */
    .cards > ul, .cards.three > ul {
        grid-template-columns: 1fr 1fr 1fr;
    }

    .cards.no-gap > ul {
        column-gap: normal;
        row-gap: normal;
    }

    .cards.vertical > ul {
        grid-template-columns: unset;
        width: calc(100% + 80px);
    }

    .cards.two > ul {
        grid-template-columns: 1fr 1fr;
    }
    

    /* descending cards */
    .cards.descending ul, .cards.ascending ul {
        grid-template-rows: var(--helix-core-card-step-height, calc(var(--helix-core-spacing-multiplier) * 12)) var(--helix-core-card-step-height, calc(var(--helix-core-spacing-multiplier) * 12)) auto var(--helix-core-card-step-height, calc(var(--helix-core-spacing-multiplier) * 12)) var(--helix-core-card-step-height, calc(var(--helix-core-spacing-multiplier) * 12));
    }

    .cards.descending > ul > li {
        grid-row: 2 / span 3;
    }

    .cards.ascending > ul > li {
        grid-row: 2 / span 3;
    }
    

    .cards.descending > ul > li:first-of-type {
        grid-row: 1 / 4;
    }


    .cards.descending > ul > li:last-of-type {
        grid-row: 3 / 6;
    }

    .cards.ascending > ul > li:first-of-type {
        grid-row: 3 / 6;
        
    }
    
    .cards.ascending > ul > li:last-of-type {
        grid-row: 1 / 4;
    }

    /* // descending cards */
}

.cards > ul > li .cards-card-wrapper {
    position: relative;
    padding: auto;
    padding-left: var(--helix-card-item-default-padding);
}

.cards.primary > ul > li .cards-card-body {
    position: relative;
    padding: auto;
    padding-left: 0;
}

